--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 		
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>LATEST</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
